--- a/argocd-applications/tensorboards-web-app.yaml
+++ b/argocd-applications/tensorboards-web-app.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/argoflow/argoflow
+    repoURL: https://github.com/cyrano5614/argoflow
     targetRevision: HEAD
     path: kubeflow/notebooks/tensorboards-web-app
     kustomize:
