--- a/kubeflow/common/istio/ingress-certificate.yaml
+++ b/kubeflow/common/istio/ingress-certificate.yaml
@@ -8,6 +8,8 @@ spec:
   issuerRef:
     name: kubeflow-self-signing-issuer
     kind: ClusterIssuer
-  commonName: kubeflow.example.com
-  dnsNames:
-    - kubeflow.example.com
+  ipAddresses:
+  - 192.168.1.241
+  # commonName: kubeflow.example.com
+  # dnsNames:
+  #   - kubeflow.example.com
