--- a/argocd-applications/jupyter-web-app.yaml
+++ b/argocd-applications/jupyter-web-app.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: jupyter-web-app
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
