--- a/argocd-applications/pod-defaults.yaml
+++ b/argocd-applications/pod-defaults.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: pod-defaults
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
