--- a/argocd-applications/tensorboard-controller.yaml
+++ b/argocd-applications/tensorboard-controller.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: tensorboards-controller
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
