--- a/argocd-applications/xgboost-operator.yaml
+++ b/argocd-applications/xgboost-operator.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: xgboost-operator
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
