--- a/bases/kubeflow-base/nvidia-gpu-operator.yaml
+++ b/bases/kubeflow-base/nvidia-gpu-operator.yaml
@@ -1,20 +1,23 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: tensorflow-operator
+  name: nvidia-gpu-operator
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
-    repoURL: https://github.com/argoflow/argoflow
-    targetRevision: HEAD
-    path: kubeflow/operators/tensorflow
-    kustomize:
-      version: v4.0.5
+    repoURL: https://nvidia.github.io/gpu-operator
+    targetRevision: 1.6.2
+    chart: gpu-operator
+    helm:
+     parameters:
+      - name : operator.defaultRuntime
+        value : containerd
   destination:
     server: https://kubernetes.default.svc
+    namespace: default
   syncPolicy:
     automated:
       prune: true
