--- a/overlays/local/kustomization.yaml
+++ b/overlays/local/kustomization.yaml
@@ -22,7 +22,7 @@ patches:
       path: /spec/commonName
     - op: delete
       path: /spec/dnsNames
-    - op: replace
+    - op: add
       path: /spec/ipAddresses/-
       value: 192.168.1.241
 
