--- a/cert-manager/kustomization.yaml
+++ b/cert-manager/kustomization.yaml
@@ -4,11 +4,24 @@ kind: Kustomization
 resources:
 - https://github.com/jetstack/cert-manager/releases/download/v1.3.1/cert-manager.yaml
 - kubeflow-self-signed-issuer.yaml
-# If you would like to setup a letsencrypt cluster issuer,
-# edit the `letsencrypt-cluster-issuer.yaml` with your details
-# see: https://cert-manager.io/docs/configuration/acme/#configuration
-# and uncomment the following line
-# - letsencrypt-cluster-issuer.yaml
+- letsencrypt-cluster-issuer.yaml
+
+configMapGenerator:
+- name: default-install-config
+  envs:
+  - params.env
+vars:
+# These vars are used for substituing in the parameters from the config map
+# into the Profiles custom resource.
+- name: acme-email
+  objref:
+    kind: ConfigMap
+    name: default-install-config
+    apiVersion: v1
+  fieldref:
+    fieldpath: data.acme-email
+configurations:
+- params.yaml
 
 images:
 - name: quay.io/jetstack/cert-manager-controller
