--- a/cert-manager/letsencrypt-cluster-issuer.yaml
+++ b/cert-manager/letsencrypt-cluster-issuer.yaml
@@ -7,14 +7,14 @@ spec:
     # You must replace this email address with your own.
     # Let's Encrypt will use this to contact you about expiring
     # certificates, and issues related to your account.
-    email: user@example.com
+    email: $(acme-email)
     server: https://acme-staging-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       # Secret resource that will be used to store the account's private key.
-      name: example-issuer-account-key
+      name: letsencrypt-staging
     # Add a single challenge solver, HTTP01 using nginx
     solvers:
-    - dns01: {}
+    - http01: {}
 ---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
@@ -25,11 +25,11 @@ spec:
     # You must replace this email address with your own.
     # Let's Encrypt will use this to contact you about expiring
     # certificates, and issues related to your account.
-    email: user@example.com
+    email: $(acme-email)
     server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       # Secret resource that will be used to store the account's private key.
-      name: example-issuer-account-key
+      name: letsencrypt-prod
     # Add a single challenge solver, HTTP01 using nginx
     solvers:
-    - dns01: {}
+    - http01: {}
