--- a/metallb/kustomization.yaml
+++ b/metallb/kustomization.yaml
@@ -7,6 +7,10 @@ resources:
   - configmap.yaml 
   - sealed-secrets.json
   # - secret.yaml
+patches:
+- path: deployment-patch.yaml
+  target:
+    kind: Deployment
 
 images:
 - name: metallb/controller
