add ingress nginx, cert-manager

--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -8,6 +8,8 @@ resources:
 - argocd-applications/metallb.yaml
 - argocd-applications/metrics-server.yaml
 - argocd-applications/nfs-server-provisioner.yaml
+- argocd-applications/ingress-nginx.yaml
+- argocd-applications/cert-manager.yaml
 # - argocd-applications/rook-ceph.yaml
 # - argocd-applications/nginx.yaml
 # - argocd-applications/nvidia-gpu-operator.yaml
