--- a/cert-manager/kustomization.yaml
+++ b/cert-manager/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+- namespace.yaml
 - https://github.com/jetstack/cert-manager/releases/download/v1.3.1/cert-manager.yaml
 - kubeflow-self-signed-issuer.yaml
 - letsencrypt-cluster-issuer.yaml
