--- a/ingress-nginx/kustomization.yaml
+++ b/ingress-nginx/kustomization.yaml
@@ -18,7 +18,7 @@ patches:
       path: /spec/type
       value: LoadBalancer
     - op: add
-      path: /spec/LoadBalancerIP
+      path: /spec/loadBalancerIP
       value: 192.168.1.240
   target:
     kind: Service
