--- a/cert-manager/letsencrypt-cluster-issuer.yaml
+++ b/cert-manager/letsencrypt-cluster-issuer.yaml
@@ -7,7 +7,8 @@ spec:
     # You must replace this email address with your own.
     # Let's Encrypt will use this to contact you about expiring
     # certificates, and issues related to your account.
-    email: $(acme-email)
+    email: cyrano5614@gmail.com
+    # email: $(acme-email)
     server: https://acme-staging-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       # Secret resource that will be used to store the account's private key.
@@ -25,7 +26,7 @@ spec:
     # You must replace this email address with your own.
     # Let's Encrypt will use this to contact you about expiring
     # certificates, and issues related to your account.
-    email: $(acme-email)
+    email: cyrano5614@gmail.com
     server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       # Secret resource that will be used to store the account's private key.
