--- a/cert-manager/letsencrypt-cluster-issuer.yaml
+++ b/cert-manager/letsencrypt-cluster-issuer.yaml
@@ -15,7 +15,9 @@ spec:
       name: letsencrypt-staging
     # Add a single challenge solver, HTTP01 using nginx
     solvers:
-    - http01: {}
+    - http01:
+        ingress:
+          class: nginx
 ---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
@@ -33,4 +35,6 @@ spec:
       name: letsencrypt-prod
     # Add a single challenge solver, HTTP01 using nginx
     solvers:
-    - http01: {}
+    - http01:
+        ingress:
+          class: nginx
