--- a/ingress-nginx/kustomization.yaml
+++ b/ingress-nginx/kustomization.yaml
@@ -10,6 +10,9 @@ patches:
     - op: add
       path: /spec/template/spec/containers/0/args/-
       value: --enable-ssl-passthrough
+    - op: add
+      path: /spec/template/spec/containers/0/args/-
+      value: --publish-service=ingress-nginx/ingress-nginx-controller
   target:
     kind: Deployment
     name: ingress-nginx-controller
