add back self signed cert

--- a/cert-manager/kustomization.yaml
+++ b/cert-manager/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 
 resources:
 - https://github.com/jetstack/cert-manager/releases/download/v1.3.1/cert-manager.yaml
-# - kubeflow-self-signed-issuer.yaml
+- kubeflow-self-signed-issuer.yaml
 - letsencrypt-cluster-issuer.yaml
 
 # configMapGenerator:
