--- a/test.yaml
+++ b/test.yaml
@@ -36,7 +36,10 @@ kind: Ingress
 metadata:
   name: echo-ingress
   annotations:
+    kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    # acme.cert-manager.io/http01-edit-in-place: "true"
+    # cert-manager.io/issue-temporary-certificate: "true"
 spec:
   tls:
   - hosts:
