--- a/kubeflow/common/istio/https-gateway.yaml
+++ b/kubeflow/common/istio/https-gateway.yaml
@@ -23,5 +23,6 @@ spec:
       protocol: HTTPS
     tls:
       mode: SIMPLE
-      privateKey: /etc/istio/ingressgateway-certs/tls.key
-      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
+      credentialName: istio-ingressgateway-certs
+      # privateKey: /etc/istio/ingressgateway-certs/tls.key
+      # serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
