--- a/kubeflow/common/istio/ingress-certificate.yaml
+++ b/kubeflow/common/istio/ingress-certificate.yaml
@@ -6,9 +6,10 @@ metadata:
 spec:
   secretName: istio-ingressgateway-certs
   issuerRef:
-    name: kubeflow-self-signing-issuer
+    name: letsencrypt-prod
     kind: ClusterIssuer
   isCA: true
-  commonName: "istio-ingressgateway-root-ca"
-  ipAddresses:
-  - 192.168.1.241
+  dnsNames:
+  - "kf.rois-theorem.com"
+  # ipAddresses:
+  # - 192.168.1.242
