--- a/kubeflow/common/oidc-authservice/kustomization.yaml
+++ b/kubeflow/common/oidc-authservice/kustomization.yaml
@@ -4,6 +4,12 @@ kind: Kustomization
 resources:
 - github.com/kubeflow/manifests/common/oidc-authservice/base
 
+configMapGenerator:
+- name: oidc-authservice-parameters
+  behavior: merge
+  envs:
+  - params.env
+
 images:
 - name: gcr.io/arrikto/kubeflow/oidc-authservice
   newName: gcr.io/arrikto/kubeflow/oidc-authservice
